awx/awx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingresss
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: awx.vscode-XX.@ENV-ANIMAL.commandemy.training # set to host name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awx-demo-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-tls-ingresss
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: awx.vscode-XX.@ENV-ANIMAL.commandemy.training # set to hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awx-demo-service
                port:
                  number: 80
